# Retail-multi-agent-AI

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE_REPORT.md  Dockerfile.api  Dockerfile.ui  ENSEMBLE_COMPARISON_REPORT.md  ENSEMBLE_STATUS_REPORT.md  FRESH_CLONE_REPORT.md  GITHUB_SETUP.md  LICENSE  MIGRATION_PLAN.md  Makefile  PHASE_4_REPORT.md  PHASE_7-8_COMPLETION_REPORT.md  PROJECT_REALIZATION_AUDIT.md  PUBLIC_RELEASE_CHECKLIST.md  PUBLIC_RELEASE_SCORE.md  README.md  RELEASE_NOTES_v1.0.0.md  REPO_CLEANUP_AUDIT.md  SECURITY.md  SIMULATION_AUDIT.md  STORE_COMPARISON_REPORT.md  TRAINING_REPORT.md  XGBOOST_COMPARISON_REPORT.md  alembic.ini  app.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  retail.db.bak  routes.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml
.streamlit/: config.toml
M5 CSV files/: Estimate WRMSSE.R  Estimate weights.R  sales_test_evaluation.csv  sales_train_evaluation.csv  sales_train_validation.csv  weights_evaluation.csv
Training_result/: ML_model_training_notebook.ipynb  best_params.pkl  submission.csv
Training_result/tests/: test_artifacts.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py
configs/: intermediate.yaml  logging.yaml  production.yaml  student.yaml
data/: README.md  calendar.csv  sales_test_validation.csv  sales_train_validation.csv  sell_prices.csv  weights_validation.csv
docs/: MODEL_REPLACEMENT_PLAN.md  PHASE3_VERIFICATION.md  agents.md  api.md  architecture.md  index.md  setup.md  simulation.md
models/: ca1_feature_importance.csv  ca1_forecast_horizon.csv  ensemble_CA_1.metrics.json  ensemble_CA_2.metrics.json  ensemble_CA_3.metrics.json  ensemble_CA_4.metrics.json  ensemble_TX_1.metrics.json  ensemble_TX_2.metrics.json  ensemble_TX_3.metrics.json  ensemble_WI_1.metrics.json  ensemble_WI_2.metrics.json  ensemble_WI_3.metrics.json  ensemble_comparison_metrics.csv  lgb_model_CA_1.metrics.json  lgb_model_CA_2.metrics.json  lgb_model_CA_3.metrics.json  lgb_model_CA_4.metrics.json  lgb_model_TX_1.metrics.json  lgb_model_TX_2.metrics.json  lgb_model_TX_3.metrics.json  lgb_model_WI_1.metrics.json  lgb_model_WI_2.metrics.json  lgb_model_WI_3.metrics.json  m5_warmstart_sales.json  store_comparison_metrics.csv  xgb_features_CA_4.json  xgb_model_CA_1.metrics.json  xgb_model_CA_2.json  xgb_model_CA_2.metrics.json  xgb_model_CA_3.json  xgb_model_CA_3.metrics.json  xgb_model_CA_4.metrics.json  xgb_model_TX_1.metrics.json  xgb_model_TX_2.json  xgb_model_TX_2.metrics.json  xgb_model_TX_3.metrics.json  xgb_model_WI_1.metrics.json  xgb_model_WI_2.json  xgb_model_WI_2.metrics.json  xgb_model_WI_3.json  (+2 more)
scripts/: create_db.sh  migrate_db.py  run_full_validation.sh  seed_data.py  start_streamlit.ps1  start_streamlit.sh  test_fresh_clone.sh
src/: __init__.py
src/api/: auth.py  limiter.py  main.py  refresh_store.py  schemas.py
src/core/: __init__.py  config.py  database.py  event_bus.py  events.py  logging_config.py  models.py
src/dashboard/: app.py
src/simulation/: __init__.py  demand_generator.py  entities.py  environment.py  environment.py.bak  external_factors.py  inventory_simulator.py  run_simulation.py
tests/: conftest.py  test_client_debug.py  test_get_real_ip.py
tests/e2e/: test_full_system.py
tests/integration/: test_api.py  test_database.py  test_ensemble_api.py  test_forecast_error_paths.py  test_model_artifacts_real.py  test_p1_security.py  test_rbac.py
tests/smoke/: test_smoke.py
tests/unit/: test_auth.py  test_config.py  test_demand_generator.py  test_ensemble.py  test_entities.py  test_environment.py  test_evaluation.py  test_event_bus.py  test_events.py  test_lgbm_io.py  test_m5_data.py  test_predict.py  test_refresh_store.py  test_schemas.py  test_train_scripts.py  (+4 more)
(+30 files in other folders)
