[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-multi-agent-ai"
version = "0.1.0"
description = "Retail multi-agent AI system"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "MIT" }
authors = [{ name = "Retail Multi-Agent AI Contributors" }]
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "pyyaml>=6.0,<7.0",
  "python-dotenv>=1.0,<2.0",
  "loguru>=0.7,<1.0",
  "redis[hiredis]>=5.0,<6.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "psycopg2-binary>=2.9,<3.0",
  "python-jose[cryptography]>=3.3,<4.0",
  "passlib[bcrypt]>=1.7,<2.0",
  "bcrypt>=4.1,<5.0",
  "xgboost>=2.0,<3.0",
  "scikit-learn>=1.5,<2.0",
  "pandas>=2.2,<3.0",
  "numpy>=1.26,<2.0",
  "scipy>=1.13,<2.0",
  "gymnasium>=0.29,<1.0",
  "stable-baselines3>=2.3,<3.0",
  "ortools>=9.10,<10.0",
  "pulp>=2.8,<3.0",
  "mlflow>=2.14,<3.0",
  "evidently>=0.4,<0.5",
  "streamlit>=1.36,<2.0",
  "plotly>=5.22,<6.0",
  "folium>=0.17,<1.0",
  "streamlit-folium>=0.21,<1.0",
  "tqdm>=4.66,<5.0",
  "click>=8.1,<9.0",
  "httpx>=0.27,<1.0",
  "tenacity>=8.4,<9.0",
  "prometheus-client>=0.20,<1.0",
  "opentelemetry-api>=1.25,<2.0",
  "opentelemetry-sdk>=1.25,<2.0",
  "opentelemetry-instrumentation-fastapi>=0.46b0,<1.0",
]

[project.optional-dependencies]
dev = ["black>=24.4,<25.0", "mypy>=1.10,<2.0", "isort>=5.13,<6.0", "pre-commit>=3.7,<4.0", "pytest>=8.2,<9.0", "pytest-asyncio>=0.23,<1.0", "pytest-cov>=5.0,<6.0"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-v --strict-markers --color=yes"
markers = ["unit: unit tests", "integration: integration tests", "e2e: end-to-end tests", "smoke: smoke tests"]
