[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-multi-agent-ai"
version = "0.1.0"
description = "Retail multi-agent AI system"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "MIT" }
authors = [{ name = "Retail Multi-Agent AI Contributors" }]
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "python-multipart>=0.0.29,<1.0",
  "pyyaml>=6.0,<7.0",
  "python-dotenv>=1.0,<2.0",
  "loguru>=0.7,<1.0",
  "redis[hiredis]>=5.0,<6.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "psycopg2-binary>=2.9,<3.0",
  "bcrypt>=4.0,<6.0",
  "slowapi>=0.1.9,<1.0",
  "python-jose[cryptography]>=3.3,<4.0",
  "scikit-learn>=1.5,<2.0",
  "lightgbm>=4.5,<5.0",
  "xgboost>=2.1,<3.0",
  "optuna>=3.6,<4.0",
  "prophet>=1.1,<2.0",
  "statsmodels>=0.14,<0.15",
  "pandas>=2.2,<3.0",
  "numpy>=1.26,<2.0",
  "scipy>=1.13,<2.0",
  "streamlit>=1.36,<2.0",
  "plotly>=5.22,<6.0",
]

[project.optional-dependencies]
dev = ["black>=24.4,<25.0", "mypy>=1.10,<2.0", "isort>=5.13,<6.0", "pre-commit>=3.7,<4.0", "pytest>=8.2,<9.0", "pytest-asyncio>=0.23,<1.0", "pytest-cov>=5.0,<6.0", "httpx>=0.27,<1.0"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-v --strict-markers --color=yes"
markers = ["unit: unit tests", "integration: integration tests", "e2e: end-to-end tests", "smoke: smoke tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]
